--- a/web-api/appsettings.json
+++ b/web-api/appsettings.json
@@ -5,5 +5,7 @@
     }
   },
   "AllowedHosts": "*",
-  "api-key" : "unicorn-rocket"
+  "api-key" : "unicorn-rocket",
+  "api-key-admin" : "mega-unicorn"
+
 }
